--- a/update/src/components/Profile.css
+++ b/update/src/components/Profile.css
@@ -1,7 +1,8 @@
-.rounded{
+/* Profile.css */
+.rounded {
     border-radius: 30%;
-    height : 200px;
-    width : 200px;
+    height: 200px;
+    width: 200px;
 }
 
 .clickable-div {
@@ -14,7 +15,11 @@
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.3);
     transition: background-color 0.3s ease;
     width: 25%;
-    transition: all .25 ease-in
+    transition: all .25 ease-in;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
 }
 
 .clickable-div:hover {
@@ -28,28 +33,22 @@
     border: none;
     outline: none;
     background-color: rgb(164, 88, 164);
-    margin-top:8px ;
+    margin-top: 8px;
     transition: all .25s ease-in-out;
     cursor: pointer;
 }
 
-.secondary:hover{
+.secondary:hover {
     color: rgb(164, 88, 164);
     background: #FFFFFF;
     cursor: pointer;
     border: 1px solid rgb(164, 88, 164);
-
 }
 
-.plus{
+.plus {
     align-items: flex-start;
     margin-right: auto;
 }
-/* 
-img{
-    height : 50%;
-    width : 50%;
-} */
 
 .banner {
     width: 100%;
@@ -58,10 +57,10 @@ img{
     object-position: top;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    border : 5px solid black;
-  }
-  
-  .profile-image {
+    border: 5px solid black;
+}
+
+.profile-image {
     width: 150px;
     height: 150px;
     border-radius: 50%;
@@ -70,72 +69,81 @@ img{
     left: calc(50% - 75px);
     border: 2px solid #fff;
     float: left;
-  }
+}
 
-html{
-    background: linear-gradient(to right, rgb(119, 0, 0), rgb(1, 13, 65));
+html {
+    background: linear-gradient(to right, rgb(27, 17, 17), rgb(1, 13, 65));
     color: rgb(212, 212, 212);
     font-family: "DejaVu Sans Mono", monospace;
-    }
+}
 
-.movie{
+h2 {
+    margin-top: 100px;
+}
+
+.movie {
     flex-direction: column;
-    margin-top: 100px;    
+    margin-top: 100px;
 }
 
-.movie img{
-    border-radius: 10px;
+.movie img {
+    border-radius: 20px;
 }
 
-
-.movie button{
+.movie button {
     background-color: rgb(0, 0, 0);
     color: white;
     border-radius: 10%;
 }
 
-.series{
+.series {
     display: flex;
     flex-wrap: wrap;
-    
+    justify-content: center;
+    align-items: center;
 }
 
-.details{
+.details {
     background-color: rgba(0, 0, 0, 0.7);
     padding: 15px;
     width: 80%;
     border-radius: 15px;
     display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  height: 100vh;
-  margin-left: 120px;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100vh;
+    margin-left: 120px;
 }
 
-.image{
+.image {
     width: 100%;
     height: 100%;
 }
 
-.desc{
-    width : 60%;
+.desc {
+    width: 60%;
 }
 
 .retour-button {
     margin-right: auto;
     margin-top: 100px;
-  }
+}
 
-.avatar img{
+.avatar img {
     border-radius: 50%;
     height: 40px;
     width: 40px;
     margin-bottom: 150px;
 }
 
-.avatar{
-    margin-right: auto;
+.avatar {
+    margin-left: auto;
 }
 
-
+.avatar img {
+    border-radius: 50%;
+    height: 40px;
+    width: 40px;
+    margin-bottom: 150px;
+}
